--- a/Space-Invaders/Space-Invaders.vcxproj.filters
+++ b/Space-Invaders/Space-Invaders.vcxproj.filters
@@ -10,7 +10,6 @@
     <ClCompile Include="source\Collision\CollisionService.cpp" />
     <ClCompile Include="source\Collision\ICollider.cpp" />
     <ClCompile Include="source\Elements\Bunker\BunkerController.cpp" />
-    <ClCompile Include="source\Elements\Bunker\BunkerData.cpp" />
     <ClCompile Include="source\Elements\Bunker\BunkerView.cpp" />
     <ClCompile Include="source\Elements\ElementService.cpp" />
     <ClCompile Include="source\Enemy\EnemyController.cpp" />
@@ -53,6 +52,7 @@
     <ClCompile Include="source\Powerup\Controllers\RapidFireController.cpp" />
     <ClCompile Include="source\Powerup\Controllers\ShieldController.cpp" />
     <ClCompile Include="source\Powerup\Controllers\TrippleLaser.cpp" />
+    <ClCompile Include="source\Elements\Bunker\BunkerModel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\Bullet\BulletConfig.h" />
